--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,20 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc = "0.8.26"
+via_ir = true
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+remappings = ['@openzeppelin/contracts=lib/openzeppelin-contracts/contracts']
+fs_permissions = [
+    { access = "read", path = "./assets/" },
+    { access = "read", path = "./broadcast" },   
+]
+
+ffi = true
+[etherscan]
+sepolia = {key = "${ETHERSCAN_API_KEY}"}
+
+[rpc_endpoints]
+sepolia = "${SEPOLIA_RPC_URL}"
+
+[profile.test]
