refactor: :pencil2: Refactor of `.env.example`, HOLESKY_RPC_URL added

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 ETHERSCAN_API_KEY=<key>
 SEPOLIA_RPC_URL=<url>
+HOLESKY_RPC_URL=<url>
 ACCOUNT=<Name of your address imported with `cast wallet import <name>`> #Use it to not expose your private key
